# tenebra

./: .gitignore  Cargo.toml  README.md  build.rs  cert.pem  core-7430.img  dist-workspace.toml  docs.txt  err.txt  fdinfo-2.img  files.img  fs-7430.img  keepalive.bash  keepalive.fish  key.pem  log.txt  max-prio.sh  mm-7430.img  package.sh  pagemap-7430.img  pagemap-shmem-19382.img  pages-1.img  pstree.img  startx.sh  stats-dump  timens-0.img  tty-info.img  xorg.conf
.cargo/: config.toml
.github/workflows/: release.yml
input-binding/: .clang-format  multitouch_simulator.c  multitouch_simulator.h
specs/: file_transfer_v1.md
src/: bkp.txt  cdp.rs  default.toml  dialogs.rs  home.html  input.rs  keys.rs  main.rs  notice.txt  rtc.rs  scale.sh  streaming.rs  streaming.rs.orig  stun.rs  touch.rs  wayland.rs  windows_service.rs
src/input/: touch.rs
src/input/touch/: bindings.rs
src/rtc/: pipeline.rs  tcp.rs
src/streaming/: pipeline.rs  playout_delay.rs
src/touch/: bindings.rs
templates/: home.html
tenebra-ai-client/: main.py  requirements.txt
tenebra-ai-client/static/: client.js  index.html  style.css
