[package]
name = "tenebra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
askama = "0.12.1"
axum = "0.7.7"
axum-macros = "0.4.2"
base64 = "0.22.1"
bytecodec = "0.4.15"
enigo = { git = "https://github.com/UE2020/enigo.git", branch = "main" }
gstreamer = "0.23.2"
gstreamer-app = "0.23.2"
igd-next = { version = "0.14.3", features = ["aio_tokio"] }
local-ip-address = "0.6.3"
rand = "0.8.5"
serde = "1.0.210"
serde_json = "1.0.128"
str0m = { version = "0.6.3" }
stun_codec = "0.3.5"
sysinfo = "0.31.4"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
toml = "0.8.20"
dirs = "6.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13.1"

[build-dependencies]
cc = "1.1.24"
bindgen = "0.69.4"
