[package]
name = "tenebra"
version = "0.8.3"
edition = "2021"
repository = "https://github.com/UE2020/tenebra"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
base64 = "0.22.1"
bytecodec = "0.4.15"
enigo = { git = "https://github.com/UE2020/enigo.git", branch = "main" }
gstreamer = "0.23.2"
gstreamer-app = "0.23.2"
igd-next = { version = "0.14.3", features = ["aio_tokio"] }
network-interface = "2.0.1"
rand = "0.9.1"
serde = "1.0.210"
serde_json = "1.0.128"
#str0m = { git = "https://github.com/UE2020/str0m.git", branch = "main" }
str0m = { version = "0.7.0", default-features = false, features = ["openssl", "sha1"] }
stun_codec = "0.3.5"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
toml = "0.8.20"
dirs = "6.0.0"
pretty_env_logger = "0.5.0"
log = "0.4.25"
cfg-if = "1.0.0"
notify-rust = "4.11.7"

[patch.crates-io]

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13.1"

[build-dependencies]
cc = "1.1.24"
bindgen = "0.69.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
